<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WeatherFragment"
    android:layout_marginTop="20dp">

    <!-- TODO: Update blank fragment layout -->


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swipeWeather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/currentTempTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_temp_string"
                android:textSize="20dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sunsetTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sunset_string"
                android:textSize="20dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/sunriseTv"
                app:layout_constraintStart_toStartOf="@+id/sunriseTv"
                app:layout_constraintTop_toBottomOf="@+id/sunriseTv" />

            <TextView
                android:id="@+id/phoneNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/weather_cond_string"
                android:textSize="20dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/currentTempTv"
                app:layout_constraintStart_toStartOf="@+id/currentTempTv"
                app:layout_constraintTop_toBottomOf="@+id/currentTempTv" />

            <TextView
                android:id="@+id/githubLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/wind_speed_string"
                android:textSize="20dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/phoneNumLabel"
                app:layout_constraintStart_toStartOf="@+id/phoneNumLabel"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumLabel" />

            <TextView
                android:id="@+id/librariesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/wetness_string"
                android:textSize="20dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/githubLabel"
                app:layout_constraintStart_toStartOf="@+id/githubLabel"
                app:layout_constraintTop_toBottomOf="@+id/githubLabel" />

            <TextView
                android:id="@+id/sunriseTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sunrise_string"
                android:textSize="20dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/librariesLabel"
                app:layout_constraintStart_toStartOf="@+id/librariesLabel"
                app:layout_constraintTop_toBottomOf="@+id/librariesLabel" />

            <TextView
                android:id="@+id/townName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/town_string"
                android:textSize="20dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/sunsetTv"
                app:layout_constraintStart_toStartOf="@+id/sunsetTv"
                app:layout_constraintTop_toBottomOf="@+id/sunsetTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</androidx.constraintlayout.widget.ConstraintLayout>